@@ -548,6 +548,20 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|AlreadyClosedException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|Directory
 import|;
 end_import
@@ -4856,10 +4870,12 @@ name|add
 argument_list|(
 literal|"current"
 argument_list|,
+name|closeSafe
+argument_list|(
 name|reader
-operator|.
+operator|::
 name|isCurrent
-argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|indexInfo
@@ -4987,6 +5003,51 @@ expr_stmt|;
 block|}
 return|return
 name|indexInfo
+return|;
+block|}
+annotation|@
+name|FunctionalInterface
+DECL|interface|IOSupplier
+interface|interface
+name|IOSupplier
+block|{
+DECL|method|get
+name|boolean
+name|get
+parameter_list|()
+throws|throws
+name|IOException
+function_decl|;
+block|}
+DECL|method|closeSafe
+specifier|private
+specifier|static
+name|Object
+name|closeSafe
+parameter_list|(
+name|IOSupplier
+name|isCurrent
+parameter_list|)
+block|{
+try|try
+block|{
+return|return
+name|isCurrent
+operator|.
+name|get
+argument_list|()
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadyClosedException
+decl||
+name|IOException
+name|exception
+parameter_list|)
+block|{     }
+return|return
+literal|false
 return|;
 block|}
 DECL|method|getFileLength
