@@ -44,6 +44,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Random
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|concurrent
 operator|.
 name|atomic
@@ -270,6 +280,12 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|Random
+name|random
+init|=
+name|random
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -281,6 +297,8 @@ name|i
 operator|<
 name|atLeast
 argument_list|(
+name|random
+argument_list|,
 literal|2
 argument_list|)
 condition|;
@@ -294,13 +312,6 @@ init|=
 name|taskNum
 operator|.
 name|incrementAndGet
-argument_list|()
-decl_stmt|;
-name|SolrQueryResponse
-name|rsp
-init|=
-operator|new
-name|SolrQueryResponse
 argument_list|()
 decl_stmt|;
 name|h
@@ -356,6 +367,225 @@ name|boolean
 name|isCompleted
 decl_stmt|;
 do|do
+block|{
+if|if
+condition|(
+name|random
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|requestMbeans
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|requestCoreStatus
+argument_list|()
+expr_stmt|;
+block|}
+name|isCompleted
+operator|=
+name|checkReloadComlpetion
+argument_list|(
+name|asyncId
+argument_list|)
+expr_stmt|;
+block|}
+do|while
+condition|(
+operator|!
+name|isCompleted
+condition|)
+do|;
+block|}
+block|}
+DECL|method|requestCoreStatus
+specifier|private
+name|void
+name|requestCoreStatus
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|h
+operator|.
+name|getCoreContainer
+argument_list|()
+operator|.
+name|getMultiCoreHandler
+argument_list|()
+operator|.
+name|handleRequest
+argument_list|(
+name|req
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|ACTION
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|CoreAdminAction
+operator|.
+name|STATUS
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"core"
+argument_list|,
+name|DEFAULT_TEST_CORENAME
+argument_list|)
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+literal|""
+operator|+
+name|rsp
+operator|.
+name|getException
+argument_list|()
+argument_list|,
+name|rsp
+operator|.
+name|getException
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|checkReloadComlpetion
+specifier|private
+name|boolean
+name|checkReloadComlpetion
+parameter_list|(
+name|int
+name|asyncId
+parameter_list|)
+block|{
+name|boolean
+name|isCompleted
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|h
+operator|.
+name|getCoreContainer
+argument_list|()
+operator|.
+name|getMultiCoreHandler
+argument_list|()
+operator|.
+name|handleRequest
+argument_list|(
+name|req
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|ACTION
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|CoreAdminAction
+operator|.
+name|REQUESTSTATUS
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|REQUESTID
+argument_list|,
+literal|""
+operator|+
+name|asyncId
+argument_list|)
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+name|List
+argument_list|<
+name|Object
+argument_list|>
+name|statusLog
+init|=
+name|rsp
+operator|.
+name|getValues
+argument_list|()
+operator|.
+name|getAll
+argument_list|(
+name|CoreAdminAction
+operator|.
+name|STATUS
+operator|.
+name|name
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+literal|"expect status check w/o error, got:"
+operator|+
+name|statusLog
+argument_list|,
+name|statusLog
+operator|.
+name|contains
+argument_list|(
+name|CoreAdminHandler
+operator|.
+name|FAILED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|isCompleted
+operator|=
+name|statusLog
+operator|.
+name|contains
+argument_list|(
+name|CoreAdminHandler
+operator|.
+name|COMPLETED
+argument_list|)
+expr_stmt|;
+return|return
+name|isCompleted
+return|;
+block|}
+DECL|method|requestMbeans
+specifier|private
+name|void
+name|requestMbeans
+parameter_list|()
+throws|throws
+name|Exception
 block|{
 name|String
 name|stats
@@ -498,104 +728,6 @@ name|Long
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-name|h
-operator|.
-name|getCoreContainer
-argument_list|()
-operator|.
-name|getMultiCoreHandler
-argument_list|()
-operator|.
-name|handleRequest
-argument_list|(
-name|req
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|ACTION
-argument_list|,
-name|CoreAdminParams
-operator|.
-name|CoreAdminAction
-operator|.
-name|REQUESTSTATUS
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|CoreAdminParams
-operator|.
-name|REQUESTID
-argument_list|,
-literal|""
-operator|+
-name|asyncId
-argument_list|)
-argument_list|,
-name|rsp
-argument_list|)
-expr_stmt|;
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unchecked"
-argument_list|)
-name|List
-argument_list|<
-name|Object
-argument_list|>
-name|statusLog
-init|=
-name|rsp
-operator|.
-name|getValues
-argument_list|()
-operator|.
-name|getAll
-argument_list|(
-name|CoreAdminAction
-operator|.
-name|STATUS
-operator|.
-name|name
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|assertFalse
-argument_list|(
-literal|"expect status check w/o error, got:"
-operator|+
-name|statusLog
-argument_list|,
-name|statusLog
-operator|.
-name|contains
-argument_list|(
-name|CoreAdminHandler
-operator|.
-name|FAILED
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|isCompleted
-operator|=
-name|statusLog
-operator|.
-name|contains
-argument_list|(
-name|CoreAdminHandler
-operator|.
-name|COMPLETED
-argument_list|)
-expr_stmt|;
-block|}
-do|while
-condition|(
-operator|!
-name|isCompleted
-condition|)
-do|;
 block|}
 block|}
 block|}
